--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -7,4 +7,17 @@ body {
     
 }
 
+
+
+@media (min-width: 1536px) {
+    .container {
+        max-width: 1232px;
+    }
+}
+
+@media (min-width: 1280px) {
+    .container {
+        max-width: 1232px;
+    }
+}
   
