--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -64,11 +64,44 @@ body {
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
-    background-color: gray;
+    
     width: 80%;
     flex-direction: column;
     flex-grow: 1;
-    
+
+    p:nth-child(1){
+        font-size: 22px;
+        opacity: 0.6;
+    }
+    p:nth-child(2){
+        font-size: 4.1vw;
+        letter-spacing: 0.7px;
+        line-height: normal;
+    }
+    button{
+        margin-bottom: 70px;
+        margin-top: 25px;
+        padding: 15px 20px 15px 30px;
+        background-color: #FBA311;
+        border-radius: 37px;
+        border: 2px solid #FBA311;
+        letter-spacing: 0.6px;
+        font-size: 18px;
+        i{
+            padding: 14px 16.75px;
+            border-radius: 100%;
+            margin-left: 20px;
+            font-size: 12px;
+        }
+    }
+    p:nth-child(4){
+        
+        padding-bottom: 50px;
+        font-size: 18px;
+        opacity: 0.6;
+        font-weight: 400;
+    }
+
 }
 .carousel-inner{
     
