--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -42,9 +42,10 @@ body {
     top: 50%;
     transform: translateY(-50%);
     background: #fff;
-    padding: 0.8rem;
+    padding: 11.5px 14px;
     border-radius: 100%;
     opacity: 0;
+    border: 1px solid rgb(114, 111, 111);
 }
 
 .carousel:hover .carousel-control-next,
@@ -87,12 +88,7 @@ body {
         border: 2px solid #FBA311;
         letter-spacing: 0.6px;
         font-size: 18px;
-        i{
-            padding: 14px 16.75px;
-            border-radius: 100%;
-            margin-left: 20px;
-            font-size: 12px;
-        }
+        
     }
     p:nth-child(4){
         
