--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+*{
+    box-sizing: border-box;
+}
 body {
     font-family: "Fira Sans Condensed", sans-serif;
     
@@ -42,7 +45,7 @@ body {
     top: 50%;
     transform: translateY(-50%);
     background: #fff;
-    padding: 11.5px 14px;
+    padding: 10.5px 14px;
     border-radius: 100%;
     opacity: 0;
     border: 1px solid rgb(114, 111, 111);
@@ -108,6 +111,29 @@ body {
     }
     
 }
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+    
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0); 
+    
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #555; 
+    
+   
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #888; 
+  }
 
 
 
