--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -8,109 +8,61 @@
 body {
     font-family: "Fira Sans Condensed", sans-serif;
     
+    
 }
 
-.carousel-indicators {
-    background: rgba(0,0,0,.5);
-    width: fit-content;
-    margin: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    bottom: 10px;
-    border-radius: 10px;
-    padding: 2px;
-}
 
-.carousel-indicators button {
-    width: 4px !important;
-    height: 4px !important;
+.iconPrice {
+    background: white;
+    color: #fba311;
+    padding: 14px 16.75px;
     border-radius: 100%;
-    margin-left: 2px !important;
-    margin-right: 2px !important;
-    border-top: none !important;
-    border-bottom: none !important;
-}
+    margin-left: 20px;
+    font-size: 12px;
+    transition: 0.4s all;
+  }
+  .btnPrice {
+    position: relative;
+    text-decoration: none;
+    display: inline-block;
+    z-index: 1;
+    transition: 0.4s all;
+    padding: 15px 20px 15px 30px;
+    background-color: #fba311;
+    border-radius: 37px;
+    border: 2px solid #fba311;
+    letter-spacing: 0.6px;
+    font-size: 18px;
+  }
+  .btnPrice:hover {
+    color: #fba311;
+  }
+  .btnPrice:hover .iconPrice {
+    background: #fba311;
+    color: #fff;
+    transform: rotate(360deg);
+  }
+  .btnPrice::before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    z-index: -1;
+    border-radius: 37px;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0px 0px 0px #fff;
+    display: block;
+    -webkit-transition: all 0.4s cubic-bezier(0.5, 0.24, 0, 1);
+    transition: all 0.4s cubic-bezier(0.5, 0.24, 0, 1);
+  }
+  /* if you want it to show from the right use -300px instead */
+  .btnPrice:hover::before {
+    box-shadow: inset 300px 0px 0px #fff;
+    border-radius: 37px;
+  }
 
-.carousel-indicators button.active {
-    width: 10px !important;
-    border-radius: 3px;
-    box-shadow: 1px 1px 2px rgb(0 0 0 / 90%);
-}
 
-.carousel-control-prev, 
-.carousel-control-next {
-    height: fit-content;
-    width: fit-content;
-    color: #000;
-    top: 50%;
-    transform: translateY(-50%);
-    background: #fff;
-    padding: 10.5px 14px;
-    border-radius: 100%;
-    opacity: 0;
-    border: 1px solid rgb(114, 111, 111);
-}
-
-.carousel:hover .carousel-control-next,
-.carousel:hover .carousel-control-prev {
-    opacity: 1;
-}
-
-.carousel-control-prev {
-    left: 1rem;
-}
-
-.carousel-control-next {
-    right: 1rem;
-}
-
-.slide-text{
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    
-    width: 80%;
-    flex-direction: column;
-    flex-grow: 1;
-
-    p:nth-child(1){
-        font-size: 22px;
-        opacity: 0.6;
-    }
-    p:nth-child(2){
-        font-size: 4.1vw;
-        letter-spacing: 0.7px;
-        line-height: normal;
-    }
-    button{
-        margin-bottom: 70px;
-        margin-top: 25px;
-        padding: 15px 20px 15px 30px;
-        background-color: #FBA311;
-        border-radius: 37px;
-        border: 2px solid #FBA311;
-        letter-spacing: 0.6px;
-        font-size: 18px;
-        
-    }
-    p:nth-child(4){
-        
-        padding-bottom: 50px;
-        font-size: 18px;
-        opacity: 0.6;
-        font-weight: 400;
-    }
-
-}
-.carousel-inner{
-    
-    height: 780px;
-    img{
-        height: 780px;
-        object-fit: cover;
-    }
-    
-}
 /* width */
 ::-webkit-scrollbar {
     width: 5px;
