--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -6,9 +6,10 @@
     box-sizing: border-box;
 }
 body {
-    font-family: "Fira Sans Condensed", sans-serif;
-    
-    
+  font-family: "Tenor Sans", sans-serif;
+}
+.numbers{
+  font-family: "Arsenal", sans-serif;
 }
 
 
