--- a/src/assets/tailwind.less
+++ b/src/assets/tailwind.less
@@ -15,6 +15,8 @@ body {
   --main-1: 251, 163, 17;
   --main-2: 63, 35, 93;
   --white: 255, 255, 255;
+  --pseudo-white: 255, 255, 254;
+  --black: 18, 18, 18;
 }
 
 
@@ -26,6 +28,7 @@ body {
     margin-left: 20px;
     font-size: 12px;
     transition: 0.4s all;
+   
   }
   .btnPrice {
     position: relative;
